# agentsofi

./: .dockerignore  .env.example  .gitignore  BRIEF_MEGA_SISTEMA.md  CLAUDE.md  DEPLOY_DOKPLOY.md  Dockerfile  README.md  SETUP_CHILE.md  pyproject.toml  supabase_add_anthropic_cost.sql  supabase_add_call_cost.sql  supabase_add_carrier.sql  supabase_add_modal_cost.sql  supabase_add_monthly_and_compute.sql  supabase_fix_fk_indexes.sql  supabase_fix_kpi_resumen.sql  supabase_fix_search_path.sql  supabase_schema.sql  supabase_seed_propiedades.sql  supabase_set_timezone.sql
app/: config.py  main.py  outbound_worker.py
app/services/: anthropic_service.py  retell_service.py  supabase_service.py
app/webhooks/: retell_handler.py
dashboard/: .dockerignore  .env.local.example  Dockerfile  package-lock.json  package.json
dashboard/src/: proxy.ts
dashboard/src/app/: globals.css  layout.tsx  page.tsx
dashboard/src/app/costos/: page.tsx
dashboard/src/app/leads/: leads-view.tsx  page.tsx  trigger-button.tsx
dashboard/src/app/leads/[id]/: page.tsx
dashboard/src/app/llamadas/: page.tsx
dashboard/src/app/login/: page.tsx
dashboard/src/app/propiedades/: page.tsx  propiedades-view.tsx
dashboard/src/app/signup/: page.tsx
dashboard/src/app/visitas/: page.tsx
dashboard/src/components/: lead-pills.tsx  shell.tsx  sidebar.tsx  topnav.tsx
dashboard/src/lib/: format.ts
dashboard/src/lib/supabase/: client.ts  server.ts  types.ts
docs/: TROUBLESHOOTING_SUPABASE_KONG.txt
scripts/: create_outbound_agent.py  create_retell_agent.py  smoke_test.py  test_functions.py
(+4 files in other folders)
