[project]
name = "agente-de-voz-sofia"
version = "0.1.0"
description = "AI voice agent for real estate powered by Retell AI, Modal, and Twilio"
requires-python = ">=3.11"
dependencies = [
    "modal>=0.73.0",
    "retell-sdk>=5.0.0",
    "twilio>=9.0.0",
    "anthropic>=0.42.0",
    "supabase>=2.7.0",
    "requests>=2.32.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.8.0",
    "pytest>=8.0.0",
]
